# robot-description-builder

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md  TODO  design.md
rdf-builder-py/: .gitignore  Cargo.toml  pyproject.toml  rdf_builder_py.pyi
rdf-builder-py/src/: geometry.rs  joint.rs  lib.rs  link.rs  material.rs  material_builder.rs  material_descriptor.rs  transform.rs  visual.rs  visual_builder.rs
rdf-builder-py/src/geometry/: box_geometry.rs  cylinder_geometry.rs  sphere_geometry.rs
rdf-builder-py/src/link/: collision.rs  geometry.rs  inertial.rs  visual.rs
rdf-builder-py/src/link/geometry/: box_geometry.rs  cylinder_geometry.rs  sphere_geometry.rs
rdf-builder-py/tests/: test_link.py
rdf-builder-rs/: Cargo.toml
rdf-builder-rs/examples/: example-1.rs  smart_builder_example.rs  transmission-example.rs  urdf-tutorial-02.rs  urdf-tutorial-05-visual.rs  urdf-tutorial-06-flexible.rs  wgpu.rs
rdf-builder-rs/src/: cluster_objects.rs  identifiers.rs  joint.rs  lib.rs  link.rs  material.rs  material_mod.rs  to_rdf.rs  transform.rs  transform_data.rs  transmission.rs  utils.rs
rdf-builder-rs/src/chained/: chained_jointbuilder.rs  chained_linkbuilder.rs  mod.rs
rdf-builder-rs/src/cluster_objects/: kinematic_data_errors.rs  kinematic_data_tree.rs  kinematic_tree.rs  kinematic_tree_data.rs  robot.rs
rdf-builder-rs/src/joint/: fixedjoint.rs  joint_data.rs  joint_tranform_mode.rs  jointbuilder.rs  smartjointbuilder.rs
rdf-builder-rs/src/joint/joint_data/: calibration_data.rs  dynamics_data.rs  limit_data.rs  mimic_data.rs  safety_controller_data.rs
rdf-builder-rs/src/joint/smartjointbuilder/: smartjointtypes.rs  smartparams.rs
rdf-builder-rs/src/link/: builder.rs  collision.rs  geometry.rs  helper_functions.rs  inertial.rs  link_parent.rs  link_shape_data.rs  linkbuilder.rs  visual.rs
rdf-builder-rs/src/link/builder/: collision_builder.rs  linkbuilder.rs  visual_builder.rs
rdf-builder-rs/src/link/geometry/: box_geometry.rs  cylinder_geometry.rs  geometry_shape_data.rs  mesh_geometry.rs  sphere_geometry.rs
rdf-builder-rs/src/material/: data.rs  descriptor.rs  material.rs  material_builder.rs  stage.rs
rdf-builder-rs/src/material_mod/: material.rs  material_builder.rs  material_data_reference.rs  material_descriptor.rs.old  material_stage.rs
rdf-builder-rs/src/to_rdf/: to_sdf.rs  to_urdf.rs
rdf-builder-rs/src/transmission/: build_transmission_error.rs  hardware_interface.rs  mod.rs  transmission_actuator.rs  transmission_joint.rs  transmission_type.rs
robot-description-builder/: CHANGELOG.md  Cargo.toml  README.md
robot-description-builder-py/: .readthedocs.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt
robot-description-builder-py/.github/workflows/: CI.yml
robot-description-builder-py/docs/: index.md  requirements-doc.txt  test-1.md
robot-description-builder-py/docs/api-old/: link-old.md  transform-test-old.md
robot-description-builder-py/docs/plugins/: docstr_plugin.py  gen_ref_pages.py  hooks.py
robot-description-builder-py/examples/: urdf-tutorial-05-visual.py  urdf-tutorial-06-flexible.py  urdf-tutorial-07-physics.py  urdf-tutorial-08-macroed.py
robot-description-builder-py/python/robot_description_builder/: __init__.py  __init__.pyi  cluster_objects.py  cluster_objects.pyi  exceptions.py  exceptions.pyi  joint.py  joint.pyi  material.py  material.pyi  transmission.py  transmission.pyi
robot-description-builder-py/python/robot_description_builder/link/: __init__.py  __init__.pyi  collision.py  collision.pyi  geometry.py  geometry.pyi  visual.py  visual.pyi
robot-description-builder-py/rdb-py-macro/: Cargo.toml
robot-description-builder-py/rdb-py-macro/src/: code_gen.rs  conversion_impls.rs  enum_generation.rs  error_gen.rs  joint_type_info.rs  lib.rs  parse.rs
robot-description-builder-py/src/: cluster_objects.rs  exceptions.rs  identifier.rs  joint.rs  lib.rs  link.rs  material.rs  material_descriptor.rs  to_rdf.rs  transform.rs  transmission.rs  utils.rs
robot-description-builder-py/src/cluster_objects/: kinematic_tree.rs  robot.rs
robot-description-builder-py/src/joint/: base_joint_builder.rs  generic_joint_builder.rs
robot-description-builder-py/src/joint/smartjointbuilder/: fixed_builder.rs  mod.rs  revolute_builder.rs
robot-description-builder-py/src/link/: collision.rs  geometry.rs  inertial.rs  visual.rs
robot-description-builder-py/src/link/geometry/: box_geometry.rs  (+3 more)
robot-description-builder-py/src/to_rdf/: to_urdf.rs
robot-description-builder-py/src/transmission/: transmission_builder.rs  transmission_joint.rs  transmission_variants.rs  transmission_wrappers.rs
robot-description-builder-py/tests/: manual-2.py  manual-test.py  test_cluster_objects.py  test_geometry.py  test_joint.py  test_link.py  test_material.py  test_tutorial_examples.py  test_visual.py
robot-description-builder/examples/: example-1.rs  smart_builder_example.rs  transmission-example.rs  urdf-tutorial-02.rs  urdf-tutorial-05-visual.rs  urdf-tutorial-06-flexible.rs  urdf-tutorial-07-physics.rs  urdf-tutorial-08-macroed.rs
robot-description-builder/src/: cluster_objects.rs  identifiers.rs  joint.rs  lib.rs  link.rs  material.rs  to_rdf.rs  transform.rs  utils.rs  yank_errors.rs
robot-description-builder/src/chained/: chained_jointbuilder.rs  chained_linkbuilder.rs  mod.rs
robot-description-builder/src/cluster_objects/: kinematic_data_errors.rs  kinematic_data_tree.rs  kinematic_tree.rs  robot.rs
robot-description-builder/src/joint/: joint_tranform_mode.rs  jointbuilder.rs  smartjointbuilder.rs
robot-description-builder/src/link/: builder.rs  collision.rs  geometry.rs  helper_functions.rs  inertial.rs  link_parent.rs  link_shape_data.rs  visual.rs
robot-description-builder/src/material/: data.rs  descriptor.rs  stage.rs
robot-description-builder/src/to_rdf/: to_sdf.rs  to_urdf.rs
robot-description-builder/src/transmission/: build_transmission_error.rs  hardware_interface.rs  mod.rs  transmission_actuator.rs  transmission_joint.rs  transmission_type.rs
(+61 files in other folders)
