[package]
name = "rdf-builder-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rdf_builder_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
rdf-builder-rs = { version = "0.1.0", path = "../rdf-builder-rs" }