[package]
name = "rdf-builder-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rdf_builder_py"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.5"
pyo3 = "0.18.1"
rdf-builder-rs = { path = "../rdf-builder-rs" }
