[package]
name = "rdf-builder-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.5"
log = { version = "0.4", optional = true }
quick-xml = "0.27.1"
thiserror = "1.0.38"

[features]
default = []
logging = ["dep:log"]
