[package]
name = "rdf-builder-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib"]

[dependencies]
itertools = { version = "0.10.5", optional = true}
log = { version = "0.4", optional = true }
quick-xml = {version = "0.27.1", optional = true}
thiserror = "1.0.38"

[features]
default = ["urdf"]
xml = ["dep:quick-xml", "dep:itertools"]
urdf = ["xml"]
sdf = ["xml"]
logging = ["dep:log"]
