[package]
name = "robot-description-builder-py"
version = "0.0.1"
edition = "2021"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "robot_description_builder_py"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.5"
pyo3 = "0.18.3"
robot-description-builder = { path = "../robot-description-builder" }
