[package]
name = "robot-description-builder-py"
version = "0.0.2"
edition = "2021"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "robot_description_builder_py"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.11.0"
pyo3 = "0.19.1"
robot-description-builder = { path = "../robot-description-builder", features=["wrapper"] }
rdb-py-macro = {path = "./rdb-py-macro"}
thiserror = "1.0"