[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
# Maybe change remove py from python package name
name = "robot-description-builder"
version = "0.0.1"
requires-python = ">=3.7"
license = "MIT"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
# Is this necessary? OBJECTIVE: Fix Importing? I think  it migth be fixed
module-name = "robot_description_builder._internal"
