[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
# Maybe change remove py from python package name
name = "robot-description-builder"
version = "0.0.3"
description = "A libary to create (valid) Robot descriptions"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["urdf", "robotics"] #, "ROS", "ROS2", "Gazebo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    #?: "Topic :: File Formats",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/SuperJappie08/robot-description-builder"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/SuperJappie08/robot-description-builder/tree/master/robot-description-builder-py"
# Changelog = ".../.../CHANGELOG.md"
Changelog = "https://github.com/SuperJappie08/robot-description-builder/tree/master/robot-description-builder-py/CHANGELOG.md"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
# Is this necessary? OBJECTIVE: Fix Importing? I think  it migth be fixed
module-name = "robot_description_builder._internal"
