[package]
name = "robot-description-builder"
description = "A libary to create (valid) Robot descriptions"
version = "0.0.3"
edition = "2021"
homepage = "https://github.com/SuperJappie08/robot-description-builder"
repository = "https://github.com/SuperJappie08/robot-description-builder/tree/master/robot-description-builder"
license = "MIT"
keywords = ["urdf", "robotics"]
categories = ["science::robotics", "data-structures", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
log = { version = "0.4.19", optional = true, features = ["std"] }
quick-xml = { version = "0.31.0", optional = true }
thiserror = "1.0"
nalgebra = "0.32.3"

[dev-dependencies]
log = { version = "0.4.19", features = ["std"] }
test-log = "0.2.12"
env_logger = "0.10.0"

[features]
default = ["urdf"]
xml = ["dep:quick-xml"]
urdf = ["xml"]
sdf = ["xml"]
logging = ["dep:log"]
wrapper = ["smart-joint-extension"]
smart-joint-extension = []
