[package]
name = "robot-description-builder"
description = "A libary to create (valid) Robot descriptions"
version = "0.0.4-dev"
edition = "2021"
homepage = "https://github.com/SuperJappie08/robot-description-builder"
repository = "https://github.com/SuperJappie08/robot-description-builder/tree/master/robot-description-builder"
license = "MIT"
keywords = ["urdf", "robotics"]
categories = ["science::robotics", "data-structures", "simulation"]
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
log = { version = "0.4.22", optional = true, features = ["std"] }
quick-xml = { version = "0.36.1", optional = true }
thiserror = "1.0"
nalgebra = "0.33.0"

[dev-dependencies]
log = { version = "0.4.22", features = ["std"] }
test-log = "0.2.16"
env_logger = "0.11.5"

[features]
default = ["urdf"]
xml = ["dep:quick-xml"]
urdf = ["xml"]
sdf = ["xml"]
logging = ["dep:log"]
wrapper = ["smart-joint-extension"]
smart-joint-extension = []
