[package]
name = "rdb-py-macro"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
itertools = "0.12.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = {version="2.0", features=["full"]}
robot-description-builder = {path = "../../robot-description-builder", features = ["smart-joint-extension"]}